fix: update mathematical notation for clarity in index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="overflow-x-auto">
                         $$ f = \frac{1}{2\pi} \sqrt{\frac{k}{m}} \Rightarrow f^2 = \left(\frac{k}{4\pi^2}\right) \cdot \frac{1}{m} + C $$
                     </div>
-                    <p class="text-sm italic mt-1">Dimana $y = f^2$, $x = 1/m$, dan gradien $b = k/4\pi^2$.</p>
+                    <p class="text-sm italic mt-1">Dimana \(y = f^2\), \(x = 1/m\), dan gradien \(b = k/4\pi^2\).</p>
                     
                     <p class="mt-2 font-semibold">2. Matriks Normal:</p>
                     <div class="overflow-x-auto text-sm">
@@ -133,9 +133,9 @@ print(f"Akurasi Model (R^2): {r**2:.4f}")
                 <h3 class="font-bold text-gray-800 mb-3 text-lg">📝 Interpretasi Fisika</h3>
                 <p class="text-sm text-gray-600 leading-relaxed">
                     Hasil analisis menunjukkan kesesuaian yang sangat kuat dengan <strong>Hukum Hooke</strong>. 
-                    Nilai intersep yang kecil ($0.17$) menunjukkan bahwa massa pegas efektif atau faktor gesekan udara sangat minim namun terdeteksi.
+                    Nilai intersep yang kecil (0.17) menunjukkan bahwa massa pegas efektif atau faktor gesekan udara sangat minim namun terdeteksi.
                     <br><br>
-                    Nilai $k \approx 32.5 \text{ kN/m}$ menunjukkan pegas yang digunakan cukup kaku (<em>stiff</em>), cocok untuk aplikasi beban menengah.
+                    Nilai \(k \approx 32.5 \text{ kN/m}\) menunjukkan pegas yang digunakan cukup kaku (<em>stiff</em>), cocok untuk aplikasi beban menengah.
                 </p>
             </div>
         </section>
