feat: update header title for structural analysis dashboard in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center gap-2">
                     <i class="fas fa-microchip text-blue-500 text-xl"></i>
-                    <span class="font-bold text-xl tracking-tight">NumComp<span class="text-blue-500">Dashboard</span></span>
+                    <span class="font-bold text-xl tracking-tight">Analisis Getaran Struktur dan Prediksi Frekuensi Natural</span>
                 </div>
                 <div class="hidden md:block text-right">
         
